--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,3 +1,11 @@
+
+Currently on my plate :
+  * tests for cron
+  * reset password and confirm account links
+  * something to kill and restart server threads
+
+_________________________________________________
+
 The Phases :
   * GET IT WORKING        Alpha 0
   * GET IT CORRECT        Alpha 1
@@ -35,6 +43,16 @@ Beta 2
   * make into daemon if possible. did not have much luck with this before
   * implement email validation request
   * implement a list_delete that removes from a specific index. (rename old list_delete to be remove_from )
+  * control_table to work with the cool built in pagination that objects already have!
+  * MongoIO pagination update - use different collection for large tables
+  * for mongo db, maybe do a separate collection for list parts. When a list is too big, maybe its object nodes uses this other collection to split the list.
+  x* caching of paginated lists ( wont do now )
+  * Add timing alarm and max execute length parameter for configuration ( though use something other than sleep, a watchdog thread maybe
+
+ js/perl IO
+  * have methods sent just once per class
+  * clean up widgets to make sure tag id fields are unique. prep_edit, for example, does not guarantee this
+  * bug : undefined showing up for undefined me.prefix_classname
 
 Beta 1
  GET IT COMPREHENSIBLE
@@ -59,26 +77,17 @@ Beta 1
   * Update how logging is done. Access log and error log like apache. Capture STDERR and collect to error log
   x* consider moving this list to github for tracking. ( this is always here. just need discipline to do it)
 
+ Javascript Side
+  * control table for scalar list entries ( javascript )
+  * control_table sort
+
 Alpha 2
- GET IT FAST
-
- Perl Side
-  * Something to kill anb restart all server threads to refresh classes
-  * MongoIO pagination update - use different collection for large tables
-  * for mongo db, maybe do a separate collection for list parts. When a list is too big, maybe its object nodes uses this other collection to split the list.
-  x* caching of paginated lists ( wont do now )
-  * Add timing alarm and max execute length parameter for configuration ( though use something other than sleep, a watchdog thread maybe
-
- js/perl IO
-  * have methods sent just once per class
-
-
-Alpha 1
  GET IT CORRECT
 
  Perl Side
-  * unit tests for new permissions models for Yote::Obj, Yote::UserObj, Yote::RootObj
+  -* unit tests for new permissions models for Yote::Obj, Yote::UserObj, Yote::RootObj
   * cron reclaculate not working for scheduled times. fix
+  * Something to kill and restart all server threads to refresh classes
   * check to see if recycling needs the rest shut down. 
       Looks like it does. Maybe have something that kills the server threads, recycles and then restarts the servers.      
  -* add tests for list_insert, list_delete, hash_insert, hash_delete ( done, needs test )
@@ -108,18 +117,13 @@ Alpha 1
 
 
  Javascript Side
-  * clean up widgets to make sure tag id fields are unique. prep_edit, for example, does not guarantee this
-  * control table for scalar list entries ( javascript )
-  * bug : undefined showing up for undefined me.prefix_classname
-  * test for pagination in unit_tests.html
-  * control_table to work with the cool built in pagination that objects already have!
-  * control_table sort
+ -* test for pagination in unit_tests.html
  -* Control table : make sure that html tags it creates have appropriate classes. Use the new 'prefix_classname' variable
  -* update control table widget to use new paginate
   * UI - account change password and request password reset link [ note - may need configuration for mail. may not need anything fancy, just something to pipe to sendmail or telnet to port 25
 
 
-Alpha 0
+Alpha 1
  GET IT WORKING
 
  -* add_to, remove_from, delete_key - Obj methods to allow for list or hash manipulation off of this object. Will work only for root if _ is the first letter
