--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,6 +1,6 @@
 
 Currently on my plate :
-  * add test for disabling / enabling accounts and logins
+  * yote.js object handle objects
   * update madyote pages
   * check logout link on mad yote index page
   * madyote edit program - html in objects accessed from WebAppServer
@@ -42,6 +42,7 @@ Beta 3
 Beta 2
  GET IT PRETTY
   * madyote edit program - html in objects accessed from WebAppServer. This means that YoteRoot will be checked for html files if the filesystem does not have them. This allows for easy editing of the web pages from the web, wiki style for admins. The files can be flushed to disk after editing. Controls to add pages should be there, etc.
+  -* add test for disabling / enabling accounts and logins
   -* account and login enabling and disabling.
   * Do not send whole object in a list if the client already is known to have it ( may just send the id in any case and the client would automatically fetch it )
   * Fix page counter
