* updated _check_root to just change the handle and password of the existing master account rather than created a new one 	* javascript create_login changed to be called on the app, and also removed defunct register_login method (called from javascript). 	* removed EMAIL and HANDLE cache vars from Yote::YoteRoot. These were buggy, given the threaded nature of Yote. This also revealed a bug in the hash function of mongo db. It was not escaping the periods in the keys properly. 	* added a Yote::SimpleTemplate class with a _fill method 	* added mail configuration options 	* account can be created on mail now 	* added mutexes in YoteRoot. These are just empty yote objects with their _lock and _unlock called at appropriate times. 	* updated tests

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2013-12-13  Eric Wolf  <wolf@Talisman>
 
 	* updated _check_root to just change the handle and password of the existing master account rather than created a new one
+	* javascript create_login changed to be called on the app, and also removed defunct register_login method (called from javascript).
+	* removed EMAIL and HANDLE cache vars from Yote::YoteRoot. These were buggy, given the threaded nature of Yote. This also revealed a bug in the hash function of mongo db. It was not escaping the periods in the keys properly.
+	* added a Yote::SimpleTemplate class with a _fill method
+	* added mail configuration options
+	* account can be created on mail now
+	* added mutexes in YoteRoot. These are just empty yote objects with their _lock and _unlock called at appropriate times.
+	* updated tests
 
 2013-12-05  Eric Wolf  <coyocanid@gamil.com>
 
