--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-01-14  Eric Wolf  <wolf@Talisman>
+
+	* Version 0.1020
+	* reset password link activation also validates email
+
 2014-01-06  Eric Wolf  <wolf@Talisman>
 
 	* Version 0.1019
