fixed paginate bug

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Version 0.1020
 	* reset password link activation also validates email
+	* fixed bug in client side pagination
 
 2014-01-06  Eric Wolf  <wolf@Talisman>
 
