--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 	* reset password link activation also validates email
 	* fixed bug in client side pagination
 	* after_new_fun javascript function also takes data hash as an argument.
+	* new element designation in columns : ~ indicates just html to follow
+	* $$ item..the item in question
 
 2014-01-06  Eric Wolf  <wolf@Talisman>
 
