--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,5 +1,7 @@
 The stack :
 
+ hash_paginator in js like list_paginator
+
  attrs for html entities : maybe prefix these with 'yote' and catch all attrs that begin with yote ( see init_el function ( aroun dline 839 ) of yote.util.js
 
  Reset cron
